--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,6 +1,5 @@
 * {
   text-decoration: none;
-  list-style: none;
   font-family: Roboto;
 }
 
@@ -21,7 +20,8 @@
   background-color: #EC008C;
   bottom: 0;
 }
-.heading-center-border::before{
+
+.heading-center-border::before {
   content: "";
   position: absolute;
   width: 60px;
@@ -39,6 +39,33 @@
   font-size: 25px;
 }
 
-.s-card{
+.s-card {
   background: #0076C2;
+}
+
+.gallery {
+  background-image: url('/Rectangle.png');
+  background-size: cover;
+
+}
+
+.facility {
+  background-color: #F2F8FB;
+  opacity: 0.7;
+}
+
+.f-before::before {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 56px;
+  background-color: #C2DDEB;
+  bottom: 40%;
+  right: 0;
+}
+.team-img img{
+  width: 300px;
+}
+.footer{
+  background-color: #101010;
 }
